Refactor ProductService to improve product management methods and add WebConfiguration for thread pool setup