@@ -5,8 +5,8 @@ import com.akshay.StoreMaster.dto.ProductResponseDTO;
 import com.akshay.StoreMaster.entity.Product;
 import com.akshay.StoreMaster.exception.ProductNotFoundException;
 import com.akshay.StoreMaster.repository.ProductRepository;
+import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -27,119 +27,102 @@ public class ProductService {
     }
 
     //This method validates product input, saves the product to the database, and returns the saved product details as a response DTO
+    @Transactional
     public List<ProductResponseDTO> addProduct(List<ProductRequestDTO> dtoList) {
-        List<ProductResponseDTO> listOfProductsToAdd = new ArrayList<>();
+        dtoList.forEach(this::validateForCreate);
 
-        for (ProductRequestDTO productRequestDTO : dtoList) {
-            if (productRequestDTO.getName() == null || productRequestDTO.getName().isBlank()) {
-                throw new IllegalArgumentException("Name cannot blank");
-            } else if (productRequestDTO.getPrice() == null || productRequestDTO.getPrice().compareTo(BigDecimal.ZERO) < 0) {
-                throw new IllegalArgumentException("Price should be positive");
-            } else if (productRequestDTO.getStock_quantity() < 0) {
-                throw new IllegalArgumentException("Quantity should be positive");
-            }
-                Product product = new Product();
-                product.setName(productRequestDTO.getName());
-                product.setPrice(productRequestDTO.getPrice());
-                product.setDescription(productRequestDTO.getDescription());
-                product.setStockQuantity(productRequestDTO.getStock_quantity());
-                product.setCategory(productRequestDTO.getCategory());
-                product.setCreatedAt(LocalDateTime.now());
-                Product savedProduct = productRepository.save(product);
+        List<Product> productsToSave = dtoList.stream()
+                .map(this::toEntity)
+                .collect(Collectors.toList());
 
-                ProductResponseDTO responseDTO = new ProductResponseDTO();
-                responseDTO.setProduct_ID(savedProduct.getId());
-                responseDTO.setName(savedProduct.getName());
-                responseDTO.setPrice(savedProduct.getPrice());
-                responseDTO.setDescription(savedProduct.getDescription());
-                responseDTO.setCategory(savedProduct.getCategory());
-                responseDTO.setStock_quantity(savedProduct.getStockQuantity());
-                listOfProductsToAdd.add(responseDTO);
-        }
-        return listOfProductsToAdd;
+        List<Product> savedProducts = productRepository.saveAll(productsToSave);
+
+        log.info("Created {} products successfully", savedProducts.size());
+        return savedProducts.stream()
+                .map(this::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     //This method updates an existing product’s details after validating input, saving changes to the database, and returning updated product information
-    public ProductResponseDTO updateProduct(Long productId, ProductRequestDTO productRequestDTO) {
-        Optional<Product> checkProduct = productRepository.findById(productId);
-        if (checkProduct.isEmpty()) {
-            throw new ProductNotFoundException(String.format("Product Not found: ID=%d" , productId));
+    @Transactional
+    public ProductResponseDTO updateProduct(Long productId, ProductRequestDTO dto) {
+        Product product = getProductOrThrow(productId);
+
+        if (dto.getName() != null && !dto.getName().isBlank()) {
+            product.setName(dto.getName());
+        }
+        if (dto.getPrice() != null && dto.getPrice().compareTo(BigDecimal.ZERO) >= 0) {
+            product.setPrice(dto.getPrice());
+        }
+        if (dto.getDescription() != null) {
+            product.setDescription(dto.getDescription());
+        }
+        if (dto.getStock_quantity() >= 0) {
+            product.setStockQuantity(dto.getStock_quantity());
+        }
+        if (dto.getCategory() != null) {
+            product.setCategory(dto.getCategory());
         }
 
-        Product product = checkProduct.get();
-
-        if (productRequestDTO.getName() != null || !productRequestDTO.getName().isBlank()) {
-            product.setName(productRequestDTO.getName());
-        }
-        if (productRequestDTO.getPrice() == null && productRequestDTO.getPrice().compareTo(BigDecimal.ZERO) >= 0) {
-            product.setPrice(productRequestDTO.getPrice());
-        }
-        if (productRequestDTO.getDescription() != null) {
-            product.setDescription(productRequestDTO.getDescription());
-        }
-        if (productRequestDTO.getStock_quantity() >= 0) {
-            product.setStockQuantity(productRequestDTO.getStock_quantity());
-        }
-        if (productRequestDTO.getCategory() != null) {
-            product.setCategory(productRequestDTO.getCategory());
-        }
-        product.setCreatedAt(LocalDateTime.now());
-
-        Product savedProduct = productRepository.save(product);
-
-        ProductResponseDTO responseDTO = new ProductResponseDTO();
-        responseDTO.setProduct_ID(savedProduct.getId());
-        responseDTO.setName(savedProduct.getName());
-        responseDTO.setPrice(savedProduct.getPrice());
-        responseDTO.setDescription(savedProduct.getDescription());
-        responseDTO.setCategory(savedProduct.getCategory());
-        responseDTO.setStock_quantity(savedProduct.getStockQuantity());
-        return responseDTO;
+        Product saved = productRepository.save(product);
+        log.info("Updated product ID={}", productId);
+        return toResponseDTO(saved);
     }
 
-    public void deleteProduct(Long productId){
-        Optional<Product> checkProduct = productRepository.findById(productId);
-        if (checkProduct.isEmpty()){
-            throw new ProductNotFoundException(
-                    String.format("Product Not found: ID=%d" , productId));
-        }
-        checkProduct.ifPresent(productRepository::delete);
+    @Transactional
+    public void deleteProduct(Long productId) {
+        Product product = getProductOrThrow(productId);
+        productRepository.delete(product);
+        log.info("Deleted product ID={}", productId);
     }
 
-    public List<ProductResponseDTO> getAllProducts(){
-        List<Product> allProducts = productRepository.findAll();
-
-        return allProducts.stream().map(product -> {
-
-            ProductResponseDTO responseDTO = new ProductResponseDTO();
-
-            responseDTO.setProduct_ID(product.getId());
-            responseDTO.setPrice(product.getPrice());
-            responseDTO.setStock_quantity(product.getStockQuantity());
-            responseDTO.setName(product.getName());
-            responseDTO.setDescription(product.getDescription());
-            responseDTO.setStock_quantity(product.getStockQuantity());
-            responseDTO.setCategory(product.getCategory());
-            return responseDTO;
-        }).collect(Collectors.toList());
+    public List<ProductResponseDTO> getAllProducts() {
+        return productRepository.findAll().stream()
+                .map(this::toResponseDTO)
+                .toList();
     }
 
     public ProductResponseDTO getProduct(Long productId){
-       Optional<Product> product = productRepository.findById(productId);
+        return toResponseDTO(getProductOrThrow(productId));
+    }
 
-       if (product.isEmpty()){
-           throw new ProductNotFoundException(
-                   String.format("Product Not found: ID=%d" , productId));
-       }
+    private Product getProductOrThrow(Long productId) {
+        return productRepository.findById(productId)
+                .orElseThrow(() -> new ProductNotFoundException(
+                        String.format("Product Not Found: ID=%d", productId)));
+    }
 
-       Product foundProduct = product.get();
-       ProductResponseDTO responseDTO = new ProductResponseDTO();
-        responseDTO.setProduct_ID(foundProduct.getId());
-        responseDTO.setName(foundProduct.getName());
-        responseDTO.setPrice(foundProduct.getPrice());
-        responseDTO.setDescription(foundProduct.getDescription());
-        responseDTO.setCategory(foundProduct.getCategory());
-        responseDTO.setStock_quantity(foundProduct.getStockQuantity());
-        return responseDTO;
+    private void validateForCreate(ProductRequestDTO dtc) {
+        if (dtc.getName() == null || dtc.getName().isBlank()) {
+            throw new IllegalArgumentException("Name cannot be blank");
+        }
+        if (dtc.getPrice() == null || dtc.getPrice().compareTo(BigDecimal.ZERO) < 0) {
+            throw new IllegalArgumentException("Price should be positive");
+        }
+        if (dtc.getStock_quantity() < 0) {
+            throw new IllegalArgumentException("Quantity should be positive");
+        }
+    }
+
+    private Product toEntity(ProductRequestDTO dto) {
+        Product product = new Product();
+        product.setName(dto.getName());
+        product.setPrice(dto.getPrice());
+        product.setDescription(dto.getDescription());
+        product.setStockQuantity(dto.getStock_quantity());
+        product.setCategory(dto.getCategory());
+        product.setCreatedAt(LocalDateTime.now());
+        return product;
+    }
+
+    private ProductResponseDTO toResponseDTO(Product product) {
+        ProductResponseDTO dto = new ProductResponseDTO();
+        dto.setProduct_ID(product.getId());
+        dto.setName(product.getName());
+        dto.setPrice(product.getPrice());
+        dto.setDescription(product.getDescription());
+        dto.setCategory(product.getCategory());
+        dto.setStock_quantity(product.getStockQuantity());
+        return dto;
     }
 }
